[project]
name = "langgraph-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.0",
    "mermaid-py>=0.8.0",
    "notebook>=7.4.4",
    "python-dotenv>=1.1.1",
]
